--- a/Pathlib/Pathlib.xcodeproj/xcshareddata/xcschemes/Pathlib iOS.xcscheme
+++ b/Pathlib/Pathlib.xcodeproj/xcshareddata/xcschemes/Pathlib iOS.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "23C4E2651BA87D9E005E8E95"
-               BuildableName = "Pathlib.framework"
-               BlueprintName = "Pathlib"
+               BuildableName = "Pathlib iOS.framework"
+               BlueprintName = "Pathlib iOS"
                ReferencedContainer = "container:Pathlib.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -43,8 +43,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "23C4E2651BA87D9E005E8E95"
-            BuildableName = "Pathlib.framework"
-            BlueprintName = "Pathlib"
+            BuildableName = "Pathlib iOS.framework"
+            BlueprintName = "Pathlib iOS"
             ReferencedContainer = "container:Pathlib.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,8 +65,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "23C4E2651BA87D9E005E8E95"
-            BuildableName = "Pathlib.framework"
-            BlueprintName = "Pathlib"
+            BuildableName = "Pathlib iOS.framework"
+            BlueprintName = "Pathlib iOS"
             ReferencedContainer = "container:Pathlib.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -83,8 +83,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "23C4E2651BA87D9E005E8E95"
-            BuildableName = "Pathlib.framework"
-            BlueprintName = "Pathlib"
+            BuildableName = "Pathlib iOS.framework"
+            BlueprintName = "Pathlib iOS"
             ReferencedContainer = "container:Pathlib.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
