--- a/Pathlib/Pathlib/Info.plist
+++ b/Pathlib/Pathlib/Info.plist
@@ -22,5 +22,9 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
+	<key>CFBundleSupportedPlatforms</key>
+  <array>
+    <string>iPhoneOS</string>
+  </array>
 </dict>
 </plist>
